[package]
name = "pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8", features = ["dynamic"]}
# If on windows, use: 
# bevy = "0.8"

## Bevy-inspector egui
# https://github.com/jakobhellermann/bevy-inspector-egui
bevy-inspector-egui = "0.12.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1 

# Enable high optimization fore dependencies
[profile.dev.package."*"]
opt-level = 3


